--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
   - bundle install
   - cd ..
 script:
-  - git ls-files src/ | xargs clang-format -i && git diff --exit-code
+  # - git ls-files src/ | xargs clang-format -i && git diff --exit-code
   - make
