--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
   - bundle install
   - cd ..
 script:
-  # - git ls-files src/ | xargs clang-format -i && git diff --exit-code
+  - git ls-files src/ | xargs clang-format -i && git diff --exit-code
   - make
   - make test
