--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ install:
   - cd ..
 script:
   - git ls-files src/ | xargs clang-format -i && git diff --exit-code
+  - git ls-files test/ | xargs clang-format -i && git diff --exit-code
   - make
   - make test
